--- a/assets/src/settings-page/style.css
+++ b/assets/src/settings-page/style.css
@@ -355,6 +355,7 @@ li.error-kept {
 	align-items: center;
 	display: flex;
 	padding-left: 1.5rem;
+	padding-right: var(--panel-button-width);
 
 	@media (min-width: 783px) {
 		padding-left: 3rem;
